# ghost

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  main.c
.github/workflows/: main.yml
asm/: CMakeLists.txt  x86-64-linux.s
asm/x86_64/: CMakeLists.txt  arch.s  linux.s
include/: ghost_types.h
include/asm/: linux.h
include/ghost/: auxv.h  string.h  system.h  system_calls.h  types.h
include/ghost/asm/: arch.h  linux.h
include/ghost/format/: elf64.h
src/: CMakeLists.txt  main.c  string.c
src/asm/: CMakeLists.txt
src/asm/x86_64/: arch.s  linux.s
src/auxv/: linux.c
src/format/: CMakeLists.txt  elf64.c
src/system/: linux.c
src/system_calls/: CMakeLists.txt  linux.c
